--- a/share/sparky-dashboard.desktop
+++ b/share/sparky-dashboard.desktop
@@ -20,7 +20,7 @@ Comment[pl]=Uruchom aplikację
 Comment[pt]=Executar aplicativo
 Comment[ru]=Запустить приложение
 Exec=/usr/bin/sparky-dashboard
-Icon=session-properties
+Icon=sparky-dashboard
 Terminal=false
 MultipleArgs=false
 Type=Application
